# CP_lab5

./: CMakeLists.txt  README.md  main.cpp
BigInt/: Field.cpp
ElipticCurve/: EllipticCurve.cpp  EllipticCurve.h  Rand.cpp  Rand.h
json example/: config.json  configSmall.json
